--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <div class='app-container'>
+        <div class='web-banner'>
+        </div>
         <div class='image-container'>
             <img src='./avatar.png' alt='Avatar' height='250' width='250'/>
         </div>
@@ -33,6 +35,17 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Minima tenetur, provident voluptatibus, voluptates deleniti cum repellendus placeat veniam, 
                 porro at nulla tempore adipisci officiis? Voluptate expedita enim vitae quibusdam fuga?
+            </div>
+            <div class='content'>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Aliquid, sapiente, officiis possimus voluptate hic non doloribus earum nihil quam ad sit rem. 
+                Iusto quibusdam, laudantium modi quos possimus facilis minima?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Minima tenetur, provident voluptatibus, voluptates deleniti cum repellendus placeat veniam, 
+                porro at nulla tempore adipisci officiis? Voluptate expedita enim vitae quibusdam fuga?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur harum sint sequi 
+                facilis adipisci voluptas totam consequatur omnis similique perferendis, 
+                maiores nam ea soluta aliquam eveniet animi debitis quas laboriosam!
             </div>
         </div>
   </div>      
